--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -1,14 +1,17 @@
-
+#h2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
 
 #datasource
-spring.datasource.url=jdbc:mysql://localhost:3306/estacionamiento
-spring.datasource.driver-class-name==com.mysql.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password= root
+spring.datasource.url=jdbc:h2:mem:~/parqueadero
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 
 #jpa
-spring.jpa.database: mysql
+spring.jpa.database: H2
 spring.jpa.show-sql: true
 spring.jpa.hibernate.ddl-auto = update
-spring.jpa.properties.hibernate.dialect = org.hibernate.MySQLDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
 server.port=8081
+
