--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,6 +9,7 @@ sonar.java.binaries=build/classes/java/main
 sonar.tests=src/test/java/co/com/ceiba
 sonar.java.test.binaries=build/classes/java/test
 
+sonar.jacoco.reportPath=build/jacoco/test.exec
 sonar.junit.reportsPath=build/test-results/test
 
 
